removed blog from menu

--- a/thai-massage-pattaya.html
+++ b/thai-massage-pattaya.html
@@ -9,12 +9,14 @@
 <head>
     <meta charset="utf-8">
     <title>Best Thai Massage in Pattaya | Thai Massage Pattaya</title>
-    <meta name="description" content="Book the best Thai massage in Pattaya of your own surroundings. Get a Thai massage in Pattaya from Sensational Home Spa.">
+    <meta name="description"
+        content="Book the best Thai massage in Pattaya of your own surroundings. Get a Thai massage in Pattaya from Sensational Home Spa.">
     <meta name="keywords" content="best thai massage in pattaya, thai massage in pattaya, thai massage pattaya">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta property="og:title" content="Outcall Massage Pattaya" />
-    <meta property="og:description" content="Outcall Massage Pattaya provides best outcall massage services, Mobile massage services, Home massage services and spa in Pattaya. Book our therapists today." />
+    <meta property="og:description"
+        content="Outcall Massage Pattaya provides best outcall massage services, Mobile massage services, Home massage services and spa in Pattaya. Book our therapists today." />
     <meta property="og:url" content="https://outcallmassagespattaya.com/" />
     <meta property="og:image" content="https://outcallmassagespattaya.com/assets/images/logo/spalogo.svg" />
     <meta property="og:type" content="Outcall Massage Pattaya" />
@@ -22,8 +24,10 @@
 
     <link rel="canonical" href="https://outcallmassagespattaya.com/thai-massage-pattaya.html" />
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:description" content="Sensational outcall massage Pattaya. 24 hours best outcall/home massage and spa services in Pattaya. Book now +66 84-270-5334." />
-    <meta name="twitter:title" content="Outcall Massage Pattaya | 24 Hours Best Home Massage & Spa Services in Pattaya" />
+    <meta name="twitter:description"
+        content="Sensational outcall massage Pattaya. 24 hours best outcall/home massage and spa services in Pattaya. Book now +66 84-270-5334." />
+    <meta name="twitter:title"
+        content="Outcall Massage Pattaya | 24 Hours Best Home Massage & Spa Services in Pattaya" />
     <meta name="twitter:image" content="https://outcallmassagespattaya.com/assets/images/logo/spalogo.svg" />
 
     <script type='application/ld+json' class='yoast-schema-graph yoast-schema-graph--main'>
@@ -124,18 +128,19 @@
         .textcc {
             text-align: center;
         }
-        
+
         @media (max-width: 468px) {
             .textcc {
                 font-size: 1.1rem !important;
                 text-align: center !important;
             }
+
             .footer-text-mob {
                 font-size: 18px !important;
                 font-weight: bold !important;
             }
         }
-        
+
         ul {
             list-style: inherit;
         }
@@ -149,11 +154,15 @@
     <link id="switch-style" href="" rel="stylesheet" type="text/css">
 
 
-    <nav class='navbar navbar-fixed-top' style='background-color: black; color: #fff;padding:5px;margin:0;left:0;right:0;font-size: 1.8rem;min-height: 30px;'>
+    <nav class='navbar navbar-fixed-top'
+        style='background-color: black; color: #fff;padding:5px;margin:0;left:0;right:0;font-size: 1.8rem;min-height: 30px;'>
         <div class='textcc'> <span style='color: yellow;font-weight: bold;'>Book Now</span> :
 
-            <a href='tel:+66-842705334' style='color: #fff'><u>+66 842705334</u></a> - <a href='https://api.whatsapp.com/send?phone=66842705334&text=Hi%20Sensational%20Home%20Spa!%20Please%20provide%20me%20with%20more%20information%20about%20services.'
-                style='color: #fff'><i class="fa fa-whatsapp" aria-hidden="true"></i><u>whatsapp</u></a> | <a href='' style='color: #fff'><i class="fa fa-commenting-o" aria-hidden="true"></i><u> Line</u></a> | <a href='' style='color: #fff'><i class="fa fa-weixin" aria-hidden="true"></i><u> Wechat</u></a>
+            <a href='tel:+66-842705334' style='color: #fff'><u>+66 842705334</u></a> - <a
+                href='https://api.whatsapp.com/send?phone=66842705334&text=Hi%20Sensational%20Home%20Spa!%20Please%20provide%20me%20with%20more%20information%20about%20services.'
+                style='color: #fff'><i class="fa fa-whatsapp" aria-hidden="true"></i><u>whatsapp</u></a> | <a href=''
+                style='color: #fff'><i class="fa fa-commenting-o" aria-hidden="true"></i><u> Line</u></a> | <a href=''
+                style='color: #fff'><i class="fa fa-weixin" aria-hidden="true"></i><u> Wechat</u></a>
         </div>
     </nav>
     <nav id="navigation" class="navbar navbar-fixed-top" style="margin-top: 23px;">
@@ -161,16 +170,20 @@
         <div class="container">
             <div class="row">
                 <div class="navbar-header col-md-3">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-niobe">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                        data-target="#navbar-niobe">
                         <span class="sr-only">Toggle navigation</span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
 
-                    <a class="navbar-brand page-scroll font-family-alt letter-spacing-1 text-extra-large text-uppercase" href="https://outcallmassagespattaya.com/">
-                        <img class="logo-navbar-dark img-fluid" src="assets/images/logo/spalogo.svg" alt="Best Outcall massage pattaya" style='height: 80px'>
-                        <img class="logo-navbar-white img-fluid" src="assets/images/logo/spalogo.svg" alt="Best Outcall massage pattaya" style='height: 80px'>
+                    <a class="navbar-brand page-scroll font-family-alt letter-spacing-1 text-extra-large text-uppercase"
+                        href="https://outcallmassagespattaya.com/">
+                        <img class="logo-navbar-dark img-fluid" src="assets/images/logo/spalogo.svg"
+                            alt="Best Outcall massage pattaya" style='height: 80px'>
+                        <img class="logo-navbar-white img-fluid" src="assets/images/logo/spalogo.svg"
+                            alt="Best Outcall massage pattaya" style='height: 80px'>
                     </a>
                 </div>
                 <!-- //.navbar-header -->
@@ -184,7 +197,6 @@
                         <li><a href="hotel-room-massage-service-pattaya.html" class="page-scroll">Hotel
                                 massage</a></li>
                         <li><a href="our-therapist.html" class="page-scroll">Our therapist</a></li>
-                        <li><a href="https://blog.outcallmassagespattaya.com" class="page-scroll">Blog</a></li>
                         <li><a href="contact.html" class="page-scroll">Contact</a></li>
                     </ul>
                 </div>
@@ -201,17 +213,29 @@
         <div class="container-fluid">
             <div class="row no-padding-rl no-padding-top padding-8">
                 <div class="col-md-6 col-md-offset-1">
-                    <h1 class="font-family-alt font-weight-700 letter-spacing-2 text-uppercase xs-title-small title-medium title-underline-thick-base-color" style='padding-top: 50px;'>Best and Authentic Thai Massage</h1>
+                    <h1 class="font-family-alt font-weight-700 letter-spacing-2 text-uppercase xs-title-small title-medium title-underline-thick-base-color"
+                        style='padding-top: 50px;'>Best and Authentic Thai Massage</h1>
                     <h2 class="text-extra-large xs-text-large text-gray-dark-2 no-margin-rl no-margin-bottom margin-4">
                         <strong>
-                            Get the Best and Authentic Outcall Thai Massage</strong></h2>
-                    <p class="margin-4 no-margin-bottom no-margin-rl text-gray-dark-2 xs-text-large text-extra-large">No other way can be convenient and better to rejuvenate your mind and body and make you feel fresh with satisfaction that can be seen on your face than getting the best and authentic Thai massage – globally famous for its way of relieving
+                            Get the Best and Authentic Outcall Thai Massage</strong>
+                    </h2>
+                    <p class="margin-4 no-margin-bottom no-margin-rl text-gray-dark-2 xs-text-large text-extra-large">No
+                        other way can be convenient and better to rejuvenate your mind and body and make you feel fresh
+                        with satisfaction that can be seen on your face than getting the best and authentic Thai massage
+                        – globally famous for its way of relieving
                         pain and keeping your body nourished well.</p>
                     <p class="margin-4 no-margin-bottom no-margin-rl text-gray-dark-2 xs-text-large text-extra-large">
-                        When soft hands of beautiful girls move on your body, it will surely increase the blood flow and fill your mind and body with new feelings, happiness and feelings of new energy level. The amazing thing is that you will get the <strong>best and authentic Thai massage</strong>                        at your home or hotel room – full secure and in the most pleasurable way with privacy.</p>
+                        When soft hands of beautiful girls move on your body, it will surely increase the blood flow and
+                        fill your mind and body with new feelings, happiness and feelings of new energy level. The
+                        amazing thing is that you will get the <strong>best and authentic Thai massage</strong> at your
+                        home or hotel room – full secure and in the most pleasurable way with privacy.</p>
                     <p class="margin-4 no-margin-bottom no-margin-rl text-gray-dark-2 xs-text-large text-extra-large">
-                        Choice is yours; you can choose the massage of your choice at <a href="https://outcallmassagespattaya.com/">Outcall Massages Pattaya</a> offered at your home or hotel room in safe and secure way with pleasure – beyond your expectations.
-                        We offer you a variety of massages for 60 Minutes, 120 minutes and 180 minutes. Choose the session of your choice. Some of the best and authentic Thai massage that are offered as alone or in combination include:</p>
+                        Choice is yours; you can choose the massage of your choice at <a
+                            href="https://outcallmassagespattaya.com/">Outcall Massages Pattaya</a> offered at your home
+                        or hotel room in safe and secure way with pleasure – beyond your expectations.
+                        We offer you a variety of massages for 60 Minutes, 120 minutes and 180 minutes. Choose the
+                        session of your choice. Some of the best and authentic Thai massage that are offered as alone or
+                        in combination include:</p>
                     <ul class='margin-2 xs-text-large text-extra-large text-gray-dark-2 '>
                         <li>Traditional Thai Spa (Dry Therapy)</li>
                         <li>Best Painkiller Massages in Pattaya</li>
@@ -219,13 +243,18 @@
                         <li>Best Deep Tissue Massage with Aroma </li>
                         <li>Couple Massage (four hands)</li>
                     </ul>
-                    <p class="margin-4 no-margin-bottom no-margin-rl text-gray-dark-2 xs-text-large text-extra-large">In addition, we also offer you a perfect blend of Thai and Balinese therapy – both dry and oil. Choose the right one of your choice or call us to schedule an appointment at your home or hotel for the best massage offered anywhere in
+                    <p class="margin-4 no-margin-bottom no-margin-rl text-gray-dark-2 xs-text-large text-extra-large">In
+                        addition, we also offer you a perfect blend of Thai and Balinese therapy – both dry and oil.
+                        Choose the right one of your choice or call us to schedule an appointment at your home or hotel
+                        for the best massage offered anywhere in
                         Pattaya for an unforgettable pleasure that you wish to get for better refreshment.</p>
                     <p class="margin-4 no-margin-bottom no-margin-rl text-gray-dark-2 xs-text-large text-extra-large">
-                        Feel free to contact us for the <strong>best and authentic Thai massage</strong> anywhere in Pattaya right to your home and hotel room. </p>
+                        Feel free to contact us for the <strong>best and authentic Thai massage</strong> anywhere in
+                        Pattaya right to your home and hotel room. </p>
 
                     <p class="text-extra-large xs-text-large text-gray-dark-2 no-margin-rl no-margin-bottom margin-4">
-                        <strong>Contact Us</strong></p>
+                        <strong>Contact Us</strong>
+                    </p>
 
                     <p class="margin-4 no-margin-bottom no-margin-rl text-gray-dark-2 xs-text-large text-extra-large">
                         +66 84-270-5334 (Whatsapp/line/wechat) </p>
@@ -245,9 +274,11 @@
             <div class="row">
                 <div class="col-md-12">
                     <div style="display:flex; justify-content: center;">
-                        <img src="/assets/footer/satisfaction.jpg" alt="100 percent satisfaction gurantee" style="height: 15rem" class="img-fluid" />
+                        <img src="/assets/footer/satisfaction.jpg" alt="100 percent satisfaction gurantee"
+                            style="height: 15rem" class="img-fluid" />
                     </div>
-                    <h3 class=" text-center text-dark  sm-title-extra-large-5 title-extra-large-1 font-weight-bold text-mobile-center footer-text-mob">
+                    <h3
+                        class=" text-center text-dark  sm-title-extra-large-5 title-extra-large-1 font-weight-bold text-mobile-center footer-text-mob">
                         Sensational Outcall Massage Pattaya</h3>
                 </div>
                 <br>
@@ -258,10 +289,13 @@
                             <div class="my-stars" style="
                 color: #fad000;
                 text-align: center;
-            "> <i class="fa fa-star final-star"></i> <i class="fa fa-star final-star"></i> <i class="fa fa-star final-star"></i> <i class="fa fa-star final-star"></i> <i class="fa fa-star final-star"></i></div>
+            "> <i class="fa fa-star final-star"></i> <i class="fa fa-star final-star"></i> <i
+                                    class="fa fa-star final-star"></i> <i class="fa fa-star final-star"></i> <i
+                                    class="fa fa-star final-star"></i></div>
                             <p class="aggRatings" style="
                 text-align: center;
-            ">Rated <span itemprop="ratingValue">4.7</span>/<span itemprop="bestRating">5</span> Based on <span itemprop="reviewCount">74</span> Verified Ratings</p>
+            ">Rated <span itemprop="ratingValue">4.7</span>/<span itemprop="bestRating">5</span> Based on <span
+                                    itemprop="reviewCount">74</span> Verified Ratings</p>
                             <meta itemprop="worstRating" content="1">
                         </div>
                     </div>
@@ -272,10 +306,10 @@
                         <ul class="list-inline list-unstyled no-margin xs-text-center xs-title-small title-medium">
                             <li><a href="https://www.facebook.com/Sensational-Home-Spa-by-may-100280938161149/"><i
                                         class="fa fa-facebook" style='font-size: 30px;'></i></a></li>
-                            <li><a href=" https://instagram.com/sensational_outcall_massage_?igshid=1k52d5297ngwl" target="_blank"><i class="fa fa-instagram"
-                                        style='font-size: 30px;'></i></a></li>
-                            <li><a href=" https://mobile.twitter.com/pattayaoutcall" target="_blank"><i class="fa fa-twitter"
-                                                style='font-size: 30px;'></i></a></li>
+                            <li><a href=" https://instagram.com/sensational_outcall_massage_?igshid=1k52d5297ngwl"
+                                    target="_blank"><i class="fa fa-instagram" style='font-size: 30px;'></i></a></li>
+                            <li><a href=" https://mobile.twitter.com/pattayaoutcall" target="_blank"><i
+                                        class="fa fa-twitter" style='font-size: 30px;'></i></a></li>
                         </ul>
                     </div>
                     <!-- //.footer-social -->
@@ -284,7 +318,8 @@
 
                 <div class="col-sm-4">
                     <div class="text-right xs-text-center">
-                        <img src="assets/images/logo/black-one.png" class='img-fluid' alt="Best deeptissue massages in pattaya" style="height: 80px">
+                        <img src="assets/images/logo/black-one.png" class='img-fluid'
+                            alt="Best deeptissue massages in pattaya" style="height: 80px">
                     </div>
                     <!-- //.footer-logo -->
                 </div>
