--- a/services.html
+++ b/services.html
@@ -9,12 +9,15 @@
 <head>
     <meta charset="utf-8">
     <title>Massage Services - Sensational Outcall Massage</title>
-    <meta name="description" content="Traditional Thai Spa (Dry Therapy), Traditional Oil Massage, Aroma Oil Therapy, Deep Tissue Therapy With Aroma, Balinese Therapy (Dry & Oil), And Couple Massage (Four Hands).">
-    <meta name="keywords" content="Traditional Thai Spa (Dry Therapy), Traditional Oil Massage, Aroma Oil Therapy, Deep Tissue Therapy With Aroma, Balinese Therapy (Dry & Oil), And Couple Massage (Four Hands).">
+    <meta name="description"
+        content="Traditional Thai Spa (Dry Therapy), Traditional Oil Massage, Aroma Oil Therapy, Deep Tissue Therapy With Aroma, Balinese Therapy (Dry & Oil), And Couple Massage (Four Hands).">
+    <meta name="keywords"
+        content="Traditional Thai Spa (Dry Therapy), Traditional Oil Massage, Aroma Oil Therapy, Deep Tissue Therapy With Aroma, Balinese Therapy (Dry & Oil), And Couple Massage (Four Hands).">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta property="og:title" content="Outcall Massage Pattaya" />
-    <meta property="og:description" content="Outcall Massage Pattaya provides best outcall massage services, Mobile massage services, Home massage services and spa in Pattaya. Book our therapists today." />
+    <meta property="og:description"
+        content="Outcall Massage Pattaya provides best outcall massage services, Mobile massage services, Home massage services and spa in Pattaya. Book our therapists today." />
     <meta property="og:url" content="https://outcallmassagespattaya.com/" />
     <meta property="og:image" content="https://outcallmassagespattaya.com/assets/images/logo/black-gold-one.png" />
     <meta property="og:type" content="Outcall Massage Pattaya" />
@@ -22,8 +25,10 @@
 
     <link rel="canonical" href="https://outcallmassagespattaya.com/services.html" />
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:description" content="Sensational outcall massage Pattaya. 24 hours best outcall/home massage and spa services in Pattaya. Book now +66 84-270-5334." />
-    <meta name="twitter:title" content="Outcall Massage Pattaya | 24 Hours Best Home Massage & Spa Services in Pattaya" />
+    <meta name="twitter:description"
+        content="Sensational outcall massage Pattaya. 24 hours best outcall/home massage and spa services in Pattaya. Book now +66 84-270-5334." />
+    <meta name="twitter:title"
+        content="Outcall Massage Pattaya | 24 Hours Best Home Massage & Spa Services in Pattaya" />
     <meta name="twitter:image" content="https://outcallmassagespattaya.com/assets/images/logo/black-gold-one.png" />
 
     <script type='application/ld+json' class='yoast-schema-graph yoast-schema-graph--main'>
@@ -124,12 +129,13 @@
         .textcc {
             text-align: center;
         }
-        
+
         @media (max-width: 468px) {
             .textcc {
                 font-size: 1.1rem !important;
                 text-align: center !important;
             }
+
             .footer-text-mob {
                 font-size: 18px !important;
                 font-weight: bold !important;
@@ -145,11 +151,15 @@
     <link id="switch-style" href="" rel="stylesheet" type="text/css">
 
 
-    <nav class='navbar navbar-fixed-top' style='background-color: black; color: #fff;padding:5px;margin:0;left:0;right:0;font-size: 1.8rem;min-height: 30px;'>
+    <nav class='navbar navbar-fixed-top'
+        style='background-color: black; color: #fff;padding:5px;margin:0;left:0;right:0;font-size: 1.8rem;min-height: 30px;'>
         <div class='textcc'> <span style='color: yellow;font-weight: bold;'>Book Now</span> :
 
-            <a href='tel:+66-842705334' style='color: #fff'><u>+66 842705334</u></a> - <a href='https://api.whatsapp.com/send?phone=66842705334&text=Hi%20Sensational%20Home%20Spa!%20Please%20provide%20me%20with%20more%20information%20about%20services.'
-                style='color: #fff'><i class="fa fa-whatsapp" aria-hidden="true"></i><u>whatsapp</u></a> | <a href='' style='color: #fff'><i class="fa fa-commenting-o" aria-hidden="true"></i><u> Line</u></a> | <a href='' style='color: #fff'><i class="fa fa-weixin" aria-hidden="true"></i><u> Wechat</u></a>
+            <a href='tel:+66-842705334' style='color: #fff'><u>+66 842705334</u></a> - <a
+                href='https://api.whatsapp.com/send?phone=66842705334&text=Hi%20Sensational%20Home%20Spa!%20Please%20provide%20me%20with%20more%20information%20about%20services.'
+                style='color: #fff'><i class="fa fa-whatsapp" aria-hidden="true"></i><u>whatsapp</u></a> | <a href=''
+                style='color: #fff'><i class="fa fa-commenting-o" aria-hidden="true"></i><u> Line</u></a> | <a href=''
+                style='color: #fff'><i class="fa fa-weixin" aria-hidden="true"></i><u> Wechat</u></a>
         </div>
     </nav>
     <nav id="navigation" class="navbar navbar-fixed-top" style="margin-top: 23px;">
@@ -157,16 +167,20 @@
         <div class="container">
             <div class="row">
                 <div class="navbar-header col-md-3">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-niobe">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                        data-target="#navbar-niobe">
                         <span class="sr-only">Toggle navigation</span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
 
-                    <a class="navbar-brand page-scroll font-family-alt letter-spacing-1 text-extra-large text-uppercase" href="#page-top">
-                        <img class="logo-navbar-dark img-fluid" src="assets/images/logo/spalogo.svg" alt="Best Outcall massage pattaya" style='height: 80px'>
-                        <img class="logo-navbar-white img-fluid" src="assets/images/logo/spalogo.svg" alt="Best Outcall massage pattaya," style='height: 80px'>
+                    <a class="navbar-brand page-scroll font-family-alt letter-spacing-1 text-extra-large text-uppercase"
+                        href="#page-top">
+                        <img class="logo-navbar-dark img-fluid" src="assets/images/logo/spalogo.svg"
+                            alt="Best Outcall massage pattaya" style='height: 80px'>
+                        <img class="logo-navbar-white img-fluid" src="assets/images/logo/spalogo.svg"
+                            alt="Best Outcall massage pattaya," style='height: 80px'>
                     </a>
                 </div>
                 <!-- //.navbar-header -->
@@ -180,7 +194,6 @@
                         <li><a href="hotel-room-massage-service-pattaya.html" class="page-scroll">Hotel
                                 massage</a></li>
                         <li><a href="our-therapist.html" class="page-scroll">Our therapist</a></li>
-                        <li><a href="https://blog.outcallmassagespattaya.com" class="page-scroll">Blog</a></li>
                         <li><a href="contact.html" class="page-scroll">Contact</a></li>
                     </ul>
                 </div>
@@ -197,15 +210,17 @@
         <div class="container-fluid">
             <div class="row no-padding-rl no-padding-top padding-8">
                 <div class="col-md-6 col-md-offset-3 text-center">
-                    <h1 class="font-family-alt font-weight-700 letter-spacing-2 text-uppercase xs-title-small title-medium title-underline-thick-base-color" style='margin-top: 50px;'>Services</h1>
+                    <h1 class="font-family-alt font-weight-700 letter-spacing-2 text-uppercase xs-title-small title-medium title-underline-thick-base-color"
+                        style='margin-top: 50px;'>Services</h1>
                     <h2 class="margin-4 no-margin-bottom no-margin-rl text-gray-dark-2 xs-text-large text-extra-large">
                         <i><strong>Our Spa accommodates all of your relaxation needs. Our aim is to give you 5 star spa
-                            facilities at your home.</strong>
+                                facilities at your home.</strong>
                         </i>
                     </h2>
 
 
-                    <h1 class="font-family-alt letter-spacing-1 margin-3 text-uppercase no-margin-bottom no-margin-rl text-gray-dark  xs-text-large text-extra-large ">
+                    <h1
+                        class="font-family-alt letter-spacing-1 margin-3 text-uppercase no-margin-bottom no-margin-rl text-gray-dark  xs-text-large text-extra-large ">
                         <b>Types of available expert outcall massage services -</b>
                     </h1>
                     <!-- <h1
@@ -227,7 +242,8 @@
                 <div class="col-sm-8 col-md-8 no-padding-rl">
                     <div class="tab-content bg-white opacity-9 position-relative" data-mh="mh-tab">
                         <!-- Triangle -->
-                        <span class="position-absolute position-top position-right triangle-top-right triangle-gray-light"></span>
+                        <span
+                            class="position-absolute position-top position-right triangle-top-right triangle-gray-light"></span>
 
                         <!-- The Spa -->
                         <div class="tab-pane active" id="tab-pane-1" role="tabpanel">
@@ -252,16 +268,22 @@
                                     <!-- //.scrollbar -->
 
                                     <div class="viewport height-100 overflow-hidden position-relative">
-                                        <div class="overview no-margin xs-position-relative position-absolute width-100">
-                                            <div class="pricing-table font-family-alt margin-2 no-margin-bottom no-margin-rl xs-text-small text-medium text-uppercase">
+                                        <div
+                                            class="overview no-margin xs-position-relative position-absolute width-100">
+                                            <div
+                                                class="pricing-table font-family-alt margin-2 no-margin-bottom no-margin-rl xs-text-small text-medium text-uppercase">
                                                 <div class="row item no-border">
-                                                    <div class="col-xs-5"><span class="font-weight-600 title-underline-thick-base-color">Services</span>
+                                                    <div class="col-xs-5"><span
+                                                            class="font-weight-600 title-underline-thick-base-color">Services</span>
                                                     </div>
-                                                    <div class="col-xs-2"><span class="font-weight-600 title-underline-thick-base-color">60
+                                                    <div class="col-xs-2"><span
+                                                            class="font-weight-600 title-underline-thick-base-color">60
                                                             min</span></div>
-                                                    <div class="col-xs-2"><span class="font-weight-600 title-underline-thick-base-color">120
+                                                    <div class="col-xs-2"><span
+                                                            class="font-weight-600 title-underline-thick-base-color">120
                                                             min</span></div>
-                                                    <div class="col-xs-2"><span class="font-weight-600 title-underline-thick-base-color">180
+                                                    <div class="col-xs-2"><span
+                                                            class="font-weight-600 title-underline-thick-base-color">180
                                                             min</span></div>
 
 
@@ -366,9 +388,11 @@
             <div class="row">
                 <div class="col-md-12">
                     <div style="display:flex; justify-content: center;">
-                        <img src="/assets/footer/satisfaction.jpg" alt="100 percent satisfaction gurantee" style="height: 15rem" class="img-fluid" />
+                        <img src="/assets/footer/satisfaction.jpg" alt="100 percent satisfaction gurantee"
+                            style="height: 15rem" class="img-fluid" />
                     </div>
-                    <h3 class=" text-center text-dark  sm-title-extra-large-5 title-extra-large-1 font-weight-bold text-mobile-center footer-text-mob">
+                    <h3
+                        class=" text-center text-dark  sm-title-extra-large-5 title-extra-large-1 font-weight-bold text-mobile-center footer-text-mob">
                         Sensational Outcall Massage Pattaya</h3>
                 </div>
                 <br>
@@ -379,10 +403,13 @@
                             <div class="my-stars" style="
                 color: #fad000;
                 text-align: center;
-            "> <i class="fa fa-star final-star"></i> <i class="fa fa-star final-star"></i> <i class="fa fa-star final-star"></i> <i class="fa fa-star final-star"></i> <i class="fa fa-star final-star"></i></div>
+            "> <i class="fa fa-star final-star"></i> <i class="fa fa-star final-star"></i> <i
+                                    class="fa fa-star final-star"></i> <i class="fa fa-star final-star"></i> <i
+                                    class="fa fa-star final-star"></i></div>
                             <p class="aggRatings" style="
                 text-align: center;
-            ">Rated <span itemprop="ratingValue">4.7</span>/<span itemprop="bestRating">5</span> Based on <span itemprop="reviewCount">74</span> Verified Ratings</p>
+            ">Rated <span itemprop="ratingValue">4.7</span>/<span itemprop="bestRating">5</span> Based on <span
+                                    itemprop="reviewCount">74</span> Verified Ratings</p>
                             <meta itemprop="worstRating" content="1">
                         </div>
                     </div>
@@ -393,10 +420,10 @@
                         <ul class="list-inline list-unstyled no-margin xs-text-center xs-title-small title-medium">
                             <li><a href="https://www.facebook.com/Sensational-Home-Spa-by-may-100280938161149/"><i
                                         class="fa fa-facebook" style='font-size: 30px;'></i></a></li>
-                            <li><a href=" https://instagram.com/sensational_outcall_massage_?igshid=1k52d5297ngwl" target="_blank"><i class="fa fa-instagram"
-                                        style='font-size: 30px;'></i></a></li>
-                            <li><a href=" https://mobile.twitter.com/pattayaoutcall" target="_blank"><i class="fa fa-twitter"
-            style='font-size: 30px;'></i></a></li>
+                            <li><a href=" https://instagram.com/sensational_outcall_massage_?igshid=1k52d5297ngwl"
+                                    target="_blank"><i class="fa fa-instagram" style='font-size: 30px;'></i></a></li>
+                            <li><a href=" https://mobile.twitter.com/pattayaoutcall" target="_blank"><i
+                                        class="fa fa-twitter" style='font-size: 30px;'></i></a></li>
                         </ul>
                     </div>
                     <!-- //.footer-social -->
@@ -405,7 +432,8 @@
 
                 <div class="col-sm-4">
                     <div class="text-right xs-text-center">
-                        <img src="assets/images/logo/black-one.png" class='img-fluid' alt="spa_logo" style="width: 50px;">
+                        <img src="assets/images/logo/black-one.png" class='img-fluid' alt="spa_logo"
+                            style="width: 50px;">
                     </div>
                     <!-- //.footer-logo -->
                 </div>
