--- a/hotel-room-massage-service-pattaya.html
+++ b/hotel-room-massage-service-pattaya.html
@@ -273,8 +273,7 @@
                     </p>
 
                     <p class="margin-4 no-margin-bottom no-margin-rl text-gray-dark-2 xs-text-large text-extra-large">
-                        <!-- +66 95-581-2264 -->
-                        (Whatsapp/line/wechat)
+                       +66 95-581-2264 (Whatsapp/line/wechat)
                     </p>
                 </div>
                 <!-- //.col-md-6 -->
