--- a/contact.html
+++ b/contact.html
@@ -294,7 +294,7 @@
             <!-- //.row -->
             <div class="row">
                 <div class="col-md-10 col-md-offset-1">
-                    <form action="POST" method="post" data-netlify='true'>
+                    <form action="mail.php" method="post" data-netlify='true'>
                         <div class="row">
                             <div class="col-sm-6 position-relative" data-mh="mh-col-contact">
                                 <input type="text" placeholder="* Your Name" name="name" id="name" class="required">
