--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Outcall Massage Pattaya | 24 Hours Best Home Massage & Spa Services in Pattaya</title>
-    <meta name="description" content="Sensational outcall massage Pattaya. 24 hours best outcall/home massage and spa services in Pattaya. Book now +66 95-581-2264">
-    <meta name="keywords" content="outcall massage in pattaya, best outcall massage in pattaya, home massage and spa pattaya, best massage services in pattaya, outcall massage pattaya, home massage services pattaya, mobile massage services pattaya">
+    <title>Outcall Massage Pattaya | 24 Hours Best Hotel Massage & Spa Services in Pattaya</title>
+    <meta name="description" content="Sensational outcall massage Pattaya. 24 hours best outcall/Hotel massage and spa services in Pattaya. Book now +66 95-581-2264">
+    <meta name="keywords" content="outcall massage in pattaya, best outcall massage in pattaya, Hotel massage and spa pattaya, best massage services in pattaya, outcall massage pattaya, Hotel massage services pattaya, mobile massage services pattaya">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
