--- a/hotel-room-massage-service-pattaya.html
+++ b/hotel-room-massage-service-pattaya.html
@@ -8,11 +8,11 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Hotel Room Massage in Pattaya | Room Service Massage in Pattaya</title>
+    <title>Hotel Outcall Massage | Home/Room Service Massage Pattaya</title>
     <meta name="description"
-        content="Sensational Home Spa offers best hotel room Massage in Pattaya, specializing in best room service massage in Pattaya. Call us +66 955812264 and book our therapists now.">
+        content="Sensational Outcall Massage Pattaya offers hotel outcall massage. We specialize in Hotel/Home/Room service massage in Pattaya. For booking Call us at +66 955812264.">
     <meta name="keywords"
-        content="hotel massages in pattaya, hotel room massage in pattaya, room service massage in pattaya">
+        content="hotel massages in pattaya, hotel room massage in pattaya, room service massage in pattaya, hotel outcall massage, home massage pattaya">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta property="og:title" content="Outcall Massage Pattaya" />
