--- a/thai-massage-pattaya.html
+++ b/thai-massage-pattaya.html
@@ -8,10 +8,10 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Best Thai Massage in Pattaya | Thai Massage Pattaya</title>
+    <title>Best Thai Massage in Pattaya | Outcall Thai Massage Pattaya</title>
     <meta name="description"
-        content="Book the best Thai massage in Pattaya of your own surroundings. Get a Thai massage in Pattaya from Sensational Home Spa.">
-    <meta name="keywords" content="best thai massage in pattaya, thai massage in pattaya, thai massage pattaya">
+        content="Book the best Thai massage in Pattaya of your own surroundings. Get the best service of Outcall Thai massage in Pattaya from Sensational Outcall Massage Pattaya.">
+    <meta name="keywords" content="best thai massage in pattaya, thai massage in pattaya, outcall thai massage pattaya">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta property="og:title" content="Outcall Massage Pattaya" />
