--- a/contact.html
+++ b/contact.html
@@ -257,7 +257,7 @@
                                 <i class="fa fa-map-marker opacity-6 text-gray title-extra-large"></i>
                                 <p
                                     class="font-family-alt margin-4 no-margin-bottom no-margin-rl text-gray-dark-2 text-medium text-uppercase">
-                                    All around the city<br>Pattaya, Bangkok</p>
+                                    All around the city<br>Pattaya</p>
                             </div>
                             <!-- //.text-center -->
                         </div>
