--- a/index.html
+++ b/index.html
@@ -884,7 +884,7 @@
                         <div class="text-center">
                             <i class="fa fa-map-marker opacity-6 text-gray title-extra-large"></i>
                             <p class="font-family-alt margin-4 no-margin-bottom no-margin-rl text-gray-dark-2 text-medium text-uppercase">
-                                All around the city<br>Pattaya, Bangkok</p>
+                                All around the city<br>Pattaya</p>
                         </div>
                         <!-- //.text-center -->
                     </div>
