--- a/index.html
+++ b/index.html
@@ -870,7 +870,7 @@
                 <h3 class="font-family-alt font-weight-700 letter-spacing-2 text-uppercase xs-title-small title-medium title-underline-thick-base-color">
                     Contact Us</h3>
                 <p class="margin-4 no-margin-bottom no-margin-rl text-gray-dark-2 xs-text-large text-extra-large">
-                    <i>Have a question or concern? Fill out the form, and submit. We will get back to you shortly.</i>
+                    <i>Have a question or concern? Email us. We will get back to you shortly.</i>
                 </p>
             </div>
             <!-- //.col-md-6 -->
@@ -917,7 +917,7 @@
         </div>
         <!-- //.row -->
 
-        <div class="row">
+        <!--<div class="row">
             <div class="col-md-10 col-md-offset-1">
                 <form action="POST" method="post" data-netlify='true'>
                     <div class="row">
@@ -947,7 +947,7 @@
             <!-- //.col-md-10 -->
         </div>
         <!-- //.row -->
-    </div>
+    </div>-->
     <!-- //.container -->
 
 
