--- a/index.html
+++ b/index.html
@@ -947,11 +947,11 @@
             <!-- //.col-md-10 -->
         </div>
         <!-- //.row -->
-    </div>-->
+    </div>
     <!-- //.container -->
 
 
-</section>
+</section>-->
 <!-- //Section - Contact End -->
 
 
