--- a/index.html
+++ b/index.html
@@ -925,22 +925,22 @@
                             <input type="text" placeholder="* Your Name" name="name" id="name" class="required">
                             <input type="text" placeholder="* Your Email" name="email" id="email" class="required email" required>
                             <input type="text" placeholder="Your Phone" name="phone" id="phone" class="number">
-                        </div>
+                        </div>-->
                         <!-- //.col-sm-6 -->
 
-                        <div class="col-sm-6 position-relative" data-mh="mh-col-contact">
+                        <!--<div class="col-sm-6 position-relative" data-mh="mh-col-contact">
                             <textarea placeholder="* Your Message" name="message" id="message" class="required" required></textarea>
                         </div>
                         <!-- //.col-sm-6 -->
-                    </div>
+                    </div>-->
                     <!-- //.row -->
 
-                    <div class="row">
+                    <!-- <div class="row">
                         <div class="col-sm-6 col-sm-offset-6">
                             <button id="btn-form-contact" type="submit" class="btn btn-color-black btn-hover-transparent btn-medium">Send Message</button>
                         </div>
                         <!-- //.col-sm-6 -->
-                    </div>
+                    </div>-->
                     <!-- //.row -->
                 </form>
             </div>
@@ -951,7 +951,7 @@
     <!-- //.container -->
 
 
-</section>-->
+</section>
 <!-- //Section - Contact End -->
 
 
