--- a/index.html
+++ b/index.html
@@ -932,7 +932,7 @@
                             <textarea placeholder="* Your Message" name="message" id="message" class="required" required></textarea>
                         </div>
                         <!-- //.col-sm-6 -->
-                    </div>-->
+                    </div>
                     <!-- //.row -->
 
                     <!-- <div class="row">
@@ -940,7 +940,7 @@
                             <button id="btn-form-contact" type="submit" class="btn btn-color-black btn-hover-transparent btn-medium">Send Message</button>
                         </div>
                         <!-- //.col-sm-6 -->
-                    </div>-->
+                    </div>
                     <!-- //.row -->
                 </form>
             </div>
