--- a/contact.html
+++ b/contact.html
@@ -292,7 +292,7 @@
                 <!-- //.col-md-8 -->
             </div>
             <!-- //.row -->
-            <div class="row">
+            <!-- <div class="row">
                 <div class="col-md-10 col-md-offset-1">
                     <!-- <form action="POST" method="post" data-netlify='true'>
                         <div class="row">
@@ -320,8 +320,8 @@
                             <!-- //.col-sm-6 -->
                         </div>
                         <!-- //.row -->
-                    </form>-->
-                </div>
+                    </form>
+                </div>-->
                 <!-- //.col-md-10 -->
             </div>
             <!-- //.row -->
