--- a/contact.html
+++ b/contact.html
@@ -318,7 +318,7 @@
                                     class="btn btn-color-black btn-hover-transparent btn-medium">Send Message</button>
                             </div>
                             <!-- //.col-sm-6 -->
-                        </div>-->
+                        </div>
                         <!-- //.row -->
                     </form>
                 </div>
