--- a/contact.html
+++ b/contact.html
@@ -239,7 +239,7 @@
                     <h2 class="margin-4 no-margin-bottom no-margin-rl  text-gray-dark-2 xs-text-large text-extra-large">
                         <i>
                             <strong>
-                                Have a question or concern? Fill out the form, and submit. We will get back to you
+                                Have a question or concern? Email Us. We will get back to you
                                 shortly.
                             </strong>
                         </i>
